# quick2uv

./: .gitignore  LICENSE  README.md  app.js  app.yml  package.json  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
api/github/: webhooks.js
assets/: pypi.yml  pyproject.toml
docs/: Basic_information.md
model/: pyproject-generator.js
