[project]
name = "..."
version = "0.0.1"
description = "..."
readme = "README.md"
requires-python = ">=3.8,<3.14"
dependencies = []
authors = [
    {name = "...", email = "..."},
]
keywords = ["python"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
]

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
Repository = "https://github.com/user/repo"
Releases = "https://github.com/user/repo/releases"

[project.scripts]
main = "main:main"
